[tool.poetry]
name = "implementations"
version = "0.1.0"
description = ""
authors = ["Mackson Heyhashiro Fonteles Mizumachi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipython = "^8.16.1"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.1"
memory-profiler = "^0.61.0"
pytest = "^7.4.2"
keras = "^2.14.0"
tensorflow = "^2.14.0"
pandas = "^2.1.1"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
